--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,10 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "packagename"
+name = "midi2vid"
 version = "0.1.0"
-dependencies = ["numpy"]
+dependencies = ["mido==1.3.2", "pygame==2.6.1"]
+requires-python = ">=3.10,<3.11"
 
 [project.optional-dependencies]
 dev = ["ruff", "pytest"]
@@ -18,13 +19,11 @@ select = [
     "I", # imports
     "N", # names
 ]
-# ruff will use the .gitignore to exclude files and directories
-# exclude = ["venv"]
 line-length = 80
 indent-width = 2
 
 [tool.pyright]
 venvPath = "."
-venv = "venv"
+venv = ".venv"
 typeCheckingMode = "strict"
 reportMissingTypeStubs = false
