--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "midi2vid"
 version = "0.1.0"
-dependencies = ["mido==1.3.2", "pygame==2.6.1"]
+dependencies = ["mido==1.3.2", "pygame==2.6.1", "gdown==5.2.0"]
 requires-python = ">=3.10,<3.11"
 
 [project.optional-dependencies]
