--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ dependencies = [
     "mido==1.3.2",
     "pygame==2.6.1",
     "gdown==5.2.0",
-    "midiutils @ git+ssh://git@github.com/pianoviz/midiutils.git",
-    "midi2hands @ file:///Users/oscar/pro/midi2hands",
+    "midiutils @ git+https://github.com/pianoviz/midiutils.git",
+    "midi2hands @ git+https://github.com/pianoviz/midi2hands.git",
 ]
-requires-python = ">=3.10,<3.11"
+requires-python = ">=3.9,<3.12"
 
 [project.optional-dependencies]
 dev = ["ruff", "pytest"]
