--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "midi2vid"
-version = "0.1.0"
+version = "0.0.1"
+description = "Simple and fast library to convert midi files to video"
+readme = "README.md"
+authors = [{ name = "Oscar Andersson", email = "oscar.966484@gmail.com" }]
+license = "MIT"
 dependencies = [
     "mido==1.3.2",
     "pygame==2.6.1",
@@ -12,7 +16,6 @@ dependencies = [
     "midiutils @ git+https://github.com/pianoviz/midiutils.git",
     "midi2hands @ git+https://github.com/pianoviz/midi2hands.git",
 ]
-requires-python = ">=3.9,<3.12"
 
 [project.optional-dependencies]
 dev = ["ruff", "pytest"]
